--- a/movies-review-service/src/main/resources/application.yaml
+++ b/movies-review-service/src/main/resources/application.yaml
@@ -1,2 +1,40 @@
-server:
-  port: 8081
+
+spring:
+  profiles:
+    active: local
+---
+spring:
+  config:
+    activate:
+      on-profile:
+        - local
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: webflux
+---
+spring:
+  config:
+    activate:
+      on-profile:
+        - non-prod
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: webflux
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: webflux
+---
+logging:
+  level:
+    root: debug
