--- a/movies-info-service/src/main/resources/application.yaml
+++ b/movies-info-service/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
   profiles:
     active: local
+server:
+  port: 8080
 ---
 spring:
   config:
@@ -12,6 +14,7 @@ spring:
       host: localhost
       port: 27017
       database: webflux
+
 ---
 spring:
   config:
